Fixed alignment issue in words-section.

--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ nav {
 .words-card {
   border-radius: 16px;
   display: flex;
-  padding: 24px 48px;
+  padding: 24px 24px;
   flex-direction: row;
   align-items: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
